<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mc_logo_blueLighter"
    android:orientation="vertical"
    tools:context=".ProfessorDetails">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_spartan_world_office_hours" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/professorNameTextView_DETAILS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/extensionTextView_DETAILS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <TextView
        android:id="@+id/colorBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@color/mc_logo_blueDark"
        android:textSize="8sp" />

    <ListView
        android:id="@+id/sessionListView_DETAILS"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:paddingStart="8dp" />

    <TextView
        android:id="@+id/colorBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@color/mc_logo_blueDark"
        android:textSize="8sp" />

    <TextView
        android:id="@+id/availableByApptTextView_DETAILS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/backToSearchButton_DETAILS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/mc_logo_blueDark"
        android:onClick="handleBackToSearch"
        android:text="@string/back_to_search" />


    <LinearLayout
        android:layout_width="424dp"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveProfessorButton_DETAILS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorLightGreen2"
            android:onClick="handleSaveProfessor"
            android:text="@string/saveProf" />

        <Button
            android:id="@+id/backToSavedButton_DETAILS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorLightGreen2"
            android:onClick="handleBackToSaved"
            android:text="@string/back_to_saved" />

    </LinearLayout>

    <Button
        android:id="@+id/mapButton_DETAILS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/mc_logo_blueDark"
        android:onClick="handleMap"
        android:text="@string/map" />

    <Button
        android:id="@+id/deleteProfessorButton_DETAILS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorLightGreen2"
        android:onClick="handleDeleteProfessor"
        android:text="@string/deleteProf" />

    <Button
        android:id="@+id/returnToOHButton_DETAILS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/headColor"
        android:onClick="handleBackToOfficeHour"
        android:text="@string/returnToOH"
        android:textColor="@color/white"
        android:visibility="invisible" />

</LinearLayout>