<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ProfessorVerificationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="249dp"
        android:layout_height="190dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/miracosta_logo" />

    <EditText
        android:id="@+id/professorFirstNameEditText_VERIFY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/professorLastNameEditText_VERIFY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/professorFirstNameEditText_VERIFY"
        app:layout_constraintStart_toStartOf="@+id/professorFirstNameEditText_VERIFY"
        app:layout_constraintTop_toBottomOf="@+id/professorFirstNameEditText_VERIFY" />

    <EditText
        android:id="@+id/pinEditText_VERIFY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/pin"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/professorLastNameEditText_VERIFY"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/professorLastNameEditText_VERIFY"
        app:layout_constraintTop_toBottomOf="@+id/professorLastNameEditText_VERIFY" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/headColor"
        android:elevation="8dp"
        android:onClick="verify"
        android:text="@string/verify_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/pinEditText_VERIFY"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/pinEditText_VERIFY"
        app:layout_constraintTop_toBottomOf="@+id/pinEditText_VERIFY" />

</androidx.constraintlayout.widget.ConstraintLayout>