<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchLinearLayout_SEARCH"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anon_search_back"
    android:orientation="vertical"
    tools:context=".StudentSearch">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="684dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/miracosta_logo_office" />

        <TextView
            android:id="@+id/searchInstructorTextView_SEARCH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/searchByInstructor"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Spinner
            android:id="@+id/instructorSpinner_SEARCH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:scrollbarSize="20dp" />

        <EditText
            android:id="@+id/instructorName_SEARCH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_professor_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/resetButton_SEARCH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:backgroundTint="@color/colorLightGreen2"
            android:elevation="16dp"
            android:onClick="reset"
            android:text="@string/reset"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <ListView
            android:id="@+id/professorsListView_SEARCH"
            android:layout_width="wrap_content"
            android:layout_height="298dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

        </ListView>

        <Button
            android:id="@+id/logInButton_SEARCH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:backgroundTint="@color/mc_logo_blueDark"
            android:elevation="16dp"
            android:onClick="handleLogIn"
            android:text="@string/log_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>