<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mc_logo_blueLighter"
    tools:context=".StudentRegistration">

    <ImageView
        android:id="@+id/spartaImageView_ST_REG"
        android:layout_width="298dp"
        android:layout_height="153dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_spartan_world" /><![CDATA[

    />

    ]]>

    <TextView
        android:id="@+id/textView"
        _toBottomOf="@+id/textView"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/student_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@id/professorEmailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spartaImageView_ST_REG" />

    <EditText
        android:id="@+id/professorEmailEditText"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/passwordProfessorEditText"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/professorEmailEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/professorEmailEditText"
        app:layout_constraintTop_toBottomOf="@+id/professorEmailEditText" />

    <EditText
        android:id="@+id/passwordProfessorConfirmEditText"
        android:layout_width="296dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/passwordConfirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/passwordProfessorEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordProfessorEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordProfessorEditText" />

    <Button
        android:id="@+id/registerProfessorButton"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="@color/mc_logo_blueDark"
        android:elevation="@android:dimen/notification_large_icon_height"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordProfessorConfirmEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>